cmake_minimum_required(VERSION 3.24)
project(P_03)

set(CMAKE_CXX_STANDARD 14)

add_executable(P_03 main.cpp)

add_executable(ex01 ex01.cpp)
add_executable(ex02 ex02.cpp)
add_executable(ex03 ex03.cpp)
add_executable(ex04 ex04.cpp)
add_executable(ex05 ex05.cpp)
add_executable(ex06 ex06.cpp largest.cpp)
add_executable(ex06jm ex06jm.cpp)